styles/main.css
html, body {
  height: 100%;
  width: 100%;
  margin: 0;
  padding: 0;
  background-color: #e9e5dc;
}

#container {
  height: 100%;
  width: 100%;
}

#map-canvas {
  height: 100%;
  width: auto;
  margin: 0;
  padding: 0;
  float: none;
  overflow: hidden;
  top: 0;
  left: 0;
}

#sidebar-container {
  height: 100%;
  width: 240px;
  background-color: #0079b6;
  color: white;
  margin: 0;
  padding: 0;
  float: right;
  overflow-y: scroll;
  overflow-x: hidden;
}

#sidebar {
/*
  height: auto;
  width: 100%;
  background-color: #0079b6;
  color: white;
  margin: 0;
  padding: 0;
  display: inline-block;
  overflow-y: scroll;
*/
  overflow-x: hidden;
  padding-bottom: 80px;
}

#sidebar-tip {
  width: 90%;
  height: 100%;
  text-align: center;
  margin: 10px;
  font-family: Verdana;
  font-style: italic;
  font-size: 12px;
}

#sidebar-totalprice {
  height: 80px;
  width: 220px;
  bottom: 0;
  padding-left: 20px;
  position: absolute;
  background-color: #44C8F5;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
  font-family: Verdana;
  font-size: 26px;
}

#sidebar-totalprice h1 {
  margin-bottom: 0px;
  font-size: 18px;
}

#sidebar-arrow {
  width: 100%;
  height: 54px;
  margin-top: 5px;
  margin-left: 15px;
  background:url("../img/arrow.png") no-repeat;
}

.infowindow {
  min-width: 150px;
  min-height: 50px;
  text-align: center;
}

.sidebar-item {
  display: inline-block;
  width: 100%;
  background-color: #44C8F5;
  border-top-left-radius: 10px;
}

.sidebar-product-container {
  width: 100%;
  background-color: #0079b6;
}

.sidebar-product {
  height: 40px;
  width: 100%;
  padding-top: 9px;
  padding-left: 18px;
  font-family: Verdana;
  font-size: 12px;
}

.sidebar-product-border {
  width: 85%;
  height: 1px;
  background-color: #44C8F5;
  margin-left: 20px;
}

.sidebar-product-selected {
  background:url("../img/orange-selected.png") left no-repeat;
}

.address-line {
  font-family: Verdana;
  font-size: 12px;
  font-weight: 200;
  padding-left: 10px;
  font-weight: bold;
}

.controls {
  margin-top: 16px;
  border: 1px solid transparent;
  border-radius: 2px 0 0 2px;
  box-sizing: border-box;
  -moz-box-sizing: border-box;
  height: 32px;
  outline: none;
  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
}

.remove-button {
  width: 28px;
  height: 28px;
  top: 10px;
  right: 10px;
  float: right;
  position: relative;
  background:url("../img/remove.png") center no-repeat;
}

#globe {
  width: 108px;
  height: 107px;
  background:url("../img/globe.png") no-repeat;
}

#pac-input {
  background-color: #fff;
  padding: 0 11px 0 13px;
  width: 400px;
  font-family: Verdana;
  font-size: 15px;
  font-weight: 300;
  text-overflow: ellipsis;
}

#err-lbl {
  background-color: #fff;
  padding: 4px 0 0 0;
  width: 500px;
  height: 50px;
  font-family: Verdana;
  font-size: 15px;
  font-weight: 300;
  text-overflow: ellipsis;
  text-align: center;
  bottom: 0;
}

#price-lbl {
  background-color: #fff;
  padding: 4px 0 0 0;
  width: 200px;
  height: 100px;
  font-family: Verdana;
  font-size: 15px;
  font-weight: 300;
  text-overflow: ellipsis;
  text-align: center;
}

#pac-input:focus {
  border-color: #4d90fe;
  margin-left: -1px;
  padding-left: 14px;  /* Regular padding-left + 1. */
  width: 401px;
}

.pac-container {
  font-family: Verdana;
}

#type-selector {
  color: #fff;
  background-color: #4d90fe;
  padding: 5px 11px 0px 11px;
}

#type-selector label {
  font-family: Verdana;
  font-size: 13px;
  font-weight: 300;
}

